Making some adjustments to the order of the elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,3 +110,9 @@ body {
     color: #b30000;
   }
   
+  .StyleContainerasksCheck{
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    height: 200px ;
+  }
