--- a/To-do-list-main/css/styles.css
+++ b/To-do-list-main/css/styles.css
@@ -35,6 +35,14 @@ body {
     
   }
 
+  .TaskStyle2{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 20px;
+    
+  }
+
   .delete-button{
     margin-bottom: 5px;
     margin-left: 30px;
@@ -141,4 +149,9 @@ body {
     display: flex;
     flex-direction: column-reverse;
     
+  }
+
+  .StyleContainerTasksCheck{
+    display: flex;
+    flex-direction: column-reverse;
   }
