--- a/To-do-list-main/css/styles.css
+++ b/To-do-list-main/css/styles.css
@@ -8,6 +8,15 @@ body {
     height: 100vh;
     margin: 0;
   }
+
+  /* title  */
+  h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #333;
+  }
+
+  /* MenuTask  */
   
   .container {
     text-align: center;
@@ -16,58 +25,10 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
-  .StyleContainerTasks{
-   display: flex;
-   flex-direction: column;
-
-  }
-
-  #Top1{
-    display: flex;
-    flex-direction: column-reverse;
-  }
-
-  .TaskStyle{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-bottom: 20px;
-    
-  }
-
-  .TaskStyle2{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-bottom: 20px;
-    
-  }
-
-  .delete-button{
-    margin-bottom: 5px;
-    margin-left: 30px;
-    
-  }
-
-  .nameTask{
-    display: flex;
-    justify-content: start;
-    margin-left: 45px;
-    word-break: break-all;
-    width: 90px;
-  }
-
-  .CheckStyle{
-    margin-left: 20px;
-  }
-
-  h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
-    color: #333;
-  }
   
-  .input-group {
+  /*task bar */
+  
+  .input-bar {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -75,7 +36,7 @@ body {
     margin-bottom: 20px;
   }
   
-  .input-group input {
+  .input-bar input {
     width: 200px;
     padding: 10px;
     border: 1px solid #ccc;
@@ -84,20 +45,66 @@ body {
   }
   
   .add-button {
-    padding: 10px 15px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 50%;
-    font-size: 20px;
-    cursor: pointer;
+  padding: 10px 15px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.add-button:hover {
+  background-color: #0056b3;
+}
+
+/* srcoll tasks */
+.ScrollStyleContainerTasks{
+  display: flex;
+  flex-direction: column;
+  
+}
+/*TaskContainerStyle*/
+  .TasksContainer{
+    display: flex;
+    flex-direction: column-reverse;
+    
+  
+  }
+
+
+  /* style of task settled by javascrip */
+  .TaskStyle{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 25px;
+  }
+
+
+  .nameTask{
+    display: flex;
+    text-align: start;
+    margin-left: 25px;
+    word-break: break-all;
+    width: 150px;
+  }
+
+  .CheckStyle{
+    margin-left: 20px;
+  }
+
+  .nameTaskStyle{
+    word-break: break-all;
+  }
+  .TaskDone{
+    text-decoration: line-through;
+    word-break: break-all;
+    opacity: 0.3;
   }
   
-  .add-button:hover {
-    background-color: #0056b3;
-  }
   
-  .feedback {
+  /* .feedback {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -110,41 +117,21 @@ body {
     font-size: 14px;
     color: #333;
     width: 150px;
-  }
-  .checkStyle{
+  } */
+   
+  /* .checkStyle{
     justify-content: start;
     align-items: start;
-  }
-  .nameTaskStyle{
-    word-break: break-all;
-  }
-  .TaskDone{
-    text-decoration: line-through;
-    word-break: break-all;
-    opacity: 0.3;
-  }
+  } */
+   
 
-.organizing{
+/* .organizing{
   display: flex;
   justify-content: end;
   align-items: start ;
   
-}
-
-  .delete-button {
-    padding: 10px;
-    background-color: transparent;
-    border: none;
-    font-size: 18px;
-    cursor: pointer;
-    color: #ff0000;
-    
-  }
-  
-  .delete-button:hover {
-    color: #b30000;
-  }
-  
+} */
+/*   
   .StyleContainerasksCheck{
     display: flex;
     flex-direction: column-reverse;
@@ -154,4 +141,4 @@ body {
   .StyleContainerTasksCheck{
     display: flex;
     flex-direction: column-reverse;
-  }
+  } */
